# vibelens

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cursor_parser.rs  cursor_scanner.rs  display.rs  format.rs  main.rs  metrics.rs  models.rs  parser.rs  scanner.rs  theme.rs  tui_app.rs  tui_events.rs  tui_ui.rs
