[package]
name = "claude-tracker-cli"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI for analyzing Claude Code usage"
license = "MIT"

[[bin]]
name = "ct"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
rayon = "1.10"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
